# QuestionBank

./: .gitignore  DEPLOY_CLOUDFLARE.md
.github/workflows/: crawl.yml
JavaGuide-main/JavaGuide-main/: README.md  README_EN.md  pnpm-lock.yaml
JavaGuide-main/JavaGuide-main/docs/.vuepress/: client.ts  navbar.ts
JavaGuide-main/JavaGuide-main/docs/ai-coding/: claudecode-commands.md  claudecode-tips.md  deepseek-v4-claude-code.md
JavaGuide-main/JavaGuide-main/docs/books/: cs-basics.md  database.md  distributed-system.md  java.md  search-engine.md  (+1 more)
api-worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
api-worker/migrations/: 0001_initial.sql  0002_review_fields.sql  0003_backfill_title_keys.sql
api-worker/scripts/: import-local.mjs
api-worker/src/: http.ts  index.ts  repository.ts  types.ts  utils.ts
api-worker/test/: api.test.ts  fake-d1.ts
code-roadmap-main/code-roadmap-main/.vuepress/: footer.ts
code-roadmap-main/code-roadmap-main/知识碎片/: Java 实现 GitHub 第三方登录详解.md  《贯穿设计模式》第三方登录实践[附前后端完整过程及测试].md
crawler/: pyproject.toml  sources.example.json
crawler/question_bank_crawler/: __init__.py  cli.py  client.py  config.py  crawler.py  discover.py  extract.py  models.py
crawler/tests/: test_crawler.py
web/: index.html  package-lock.json  package.json  tsconfig.json
web/scripts/: generate-content.mjs  smoke-ui.mjs
web/scripts/content/: parser.mjs
web/src/: App.vue  env.d.ts  types.ts
web/src/api/: content.ts
web/src/assets/: styles.css
web/src/utils/: search.ts  storage.ts
web/test/: api-content.test.ts  parser.test.mjs
(+62 files in other folders)
